--- a/css/style.css
+++ b/css/style.css
@@ -2,22 +2,30 @@
 /* rgba(200,200,250,.1)
 rgba(104, 252, 252, 0.5)
 rgba(30, 105, 190, 0.5) */
-#wrapper{
-  background: repeating-linear-gradient(180deg, darkgray 0% , lightgray 18%, red  100%);
-  background-repeat: no-repeat;
-  background-size: contain;
+
+body{
+  background: linear-gradient(180deg, darkgray 0% , lightgray 18%, red  100%);
   height: 100vh;
+  margin:0;
 }
-#game-space{
+#wrapper{
+  background-repeat: no-repeat;
+  background-size: cover;
   overflow: initial;
 }
-#grid-holder2{
-  background-color: lightgray;
+#grid-holder0, #grid-holder1, #grid-holder2{
+  margin: 25px;
 }
-.battlemap{
+#game-space{
+  box-sizing: border-box;
+  background-color: lightgray;
+  width: auto;
+}
+/* .battlemap{
   width: 50px; 
   height: 50px;
-}
+} */
+
 .cell{
   width: 25px; 
   height: 25px;
@@ -50,7 +58,7 @@ rgba(30, 105, 190, 0.5) */
 .player{
   background-color: green;
   border-radius: 50%;
-  z-index: 3;
+  z-index: 1;
   box-shadow: 0px 0px 30px rgba(0, 0, 0, 0.5);
 }
 
@@ -58,7 +66,7 @@ rgba(30, 105, 190, 0.5) */
   border-radius: 30%;
   border: .5px solid magenta;
 }
-
+/* 
  .arrow-up {
 
     border-left: 5px solid transparent;
@@ -84,4 +92,4 @@ rgba(30, 105, 190, 0.5) */
     border-top: 6px solid transparent;
     border-bottom: 6px solid transparent; 
     border-right:1px solid blue; 
-  } 
+  }  */
