--- a/css/style.css
+++ b/css/style.css
@@ -4,46 +4,78 @@ rgba(104, 252, 252, 0.5)
 rgba(30, 105, 190, 0.5) */
 
 body{
-  font-size: 0;
-  margin: auto;
-  padding: 0;
-}
-#wrapper{
+
   background: linear-gradient(180deg, darkgray 0% , lightgray 18%, red  100%);
-  height: 100vh;
+  height: 100%;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  overflow: inherit;
+}
+
+/* 
+.bg{
+  background-image: url("/cloud-drawing-texture-1.png");
+  height: 100%;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  z-index: -10;
+}  */
+
+#wrapper{ 
+  border: 1px red solid;
+ 
+}
+.playerInfo{
+  font-size:1.2em;
+  font-style: bolder;
+  border: 1 solid black;
+  margin: .1em;
+}
+#header{
   margin:0;
-  font-size: 18px;
+  font-size: inherit;
 }
-h1{
-  font-size: 1.75em;
-  
-}
-#start{
+#startButton{
   font-size: 1em;
 }
 #display{
   font-size: 1em;
 }
 #grid-holder0{
-  background-color: lightgray;
+  margin: 1em;
+  background-color: rgba(255, 255, 255, 0.5);
+  margin:10px;
+  margin-right: 5vw;
+  
 }
 #game-space{
   border: 1px, red, solid;
   background-repeat: no-repeat;
   overflow: initial;
   background-size: cover;
-  margin-top: .2em;
-}
-/* .battlemap{
-  width: 50px; 
-  height: 50px;
-} */
-
-.cell{
-  width: 25px; 
-  height: 25px;
-  border: 1px solid rgba(0,0,0,.1);
+  margin: 1em;
+  margin-top: .2em;  
   
+}
+.playerInfo{
+  text-align: center;
+  border: 1px solid black;
+  margin-top: .5em;
+}
+#divider{
+  /* background: url('../single_border.png'); */
+  background-size: contain;
+  background-position: center;
+  width: 15vw;
+  height: 2em;
+  padding-bottom: 5px;
+}
+.cell{
+  width: 24px; 
+  height: 24px;
+  border: 1px solid rgba(0,0,0,.1);
 }
 .door{
   background-color: lightblue;
@@ -73,6 +105,10 @@ h1{
   box-shadow: 0px 0px 30px rgba(0, 0, 0, 0.5);
 }
 
+.playerAttacked{
+  background-color: lightcoral;
+  z-index: 1;
+}
 .enemy{
   border-radius: 30%;
   border: .5px solid magenta;
