--- a/css/style.css
+++ b/css/style.css
@@ -4,38 +4,51 @@ rgba(104, 252, 252, 0.5)
 rgba(30, 105, 190, 0.5) */
 
 body{
-
-  background: linear-gradient(180deg, darkgray 0% , lightgray 18%, red  100%);
+  background-image: url("../cloud-drawing-texture-1.png");
+  /* background: linear-gradient(180deg, darkgray 0% , lightgray 18%, red  100%); */
   height: 100%;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
   overflow: inherit;
+  max-height: 70vh;
+}
+#header{
+  background-color: rgb(255, 255, 255);
+  padding: 1em;
+  box-shadow: (0,0,20px,black)
 }
 
-/* 
-.bg{
-  background-image: url("/cloud-drawing-texture-1.png");
-  height: 100%;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  z-index: -10;
-}  */
+#wrapper{
+  background-color: rgba(192, 192, 192, 0.7);
+  padding: 1em;
+  border-radius: 1em;
+  border-top: 1.5rem solid rgba(227, 215, 255, 0.8);
+  border-left: 1.5rem solid rgba(227, 215, 255, 0.8);
+  border-bottom: 1.5rem solid rgba(192, 192, 192, 0.8);
+  border-right: 1.5rem solid rgba(192, 192, 192, 0.8);
+} 
 
-#wrapper{ 
+#game-info{ 
   border: 1px red solid;
- 
+  display: block;
+}
+.game-info-item{
+  padding: .1em;
+  border: 1px black solid;
+  overflow: contain;
+  max-width: 10vw;
 }
 .playerInfo{
   font-size:1.2em;
   font-style: bolder;
   border: 1 solid black;
   margin: .1em;
+  background-color: white;
 }
 #header{
   margin:0;
-  font-size: inherit;
+  font-size: inherit; 
 }
 #startButton{
   font-size: 1em;
@@ -43,11 +56,16 @@ body{
 #display{
   font-size: 1em;
 }
+.gameContent{
+  background-color: rgba(255, 255, 255, 0.5);
+}
+
 #grid-holder0{
   margin: 1em;
-  background-color: rgba(255, 255, 255, 0.5);
   margin:10px;
-  margin-right: 5vw;
+  border: 1px solid black;
+  box-sizing: border-box;
+  
   
 }
 #game-space{
@@ -58,19 +76,6 @@ body{
   margin: 1em;
   margin-top: .2em;  
   
-}
-.playerInfo{
-  text-align: center;
-  border: 1px solid black;
-  margin-top: .5em;
-}
-#divider{
-  /* background: url('../single_border.png'); */
-  background-size: contain;
-  background-position: center;
-  width: 15vw;
-  height: 2em;
-  padding-bottom: 5px;
 }
 .cell{
   width: 24px; 
@@ -112,6 +117,40 @@ body{
 .enemy{
   border-radius: 30%;
   border: .5px solid magenta;
+}
+
+.playerInfo{
+  text-align: center;
+  border: 1px solid black;
+}
+#divider{
+  /* background: url('../single_border.png'); */
+  background-size: contain;
+  background-position: center;
+  width: 15vw;
+  height: 2em;
+  padding-bottom: 5px;
+}
+#playerHP{
+  border: 0px solid black;
+}
+#playerName{
+  font-weight: bolder; 
+}
+.torches{
+    background: url("../fire--v2.png");
+    background-size: contain;
+    background-color: rgba(190, 190, 190, 0.24);
+    border-radius: 50%;
+    margin: .1em .3em;
+  
+}
+.heartBox{
+  background: url("../heart--v2.png");
+  background-size: contain;
+  background-color: red;
+  border-radius: 50%;
+  margin: .1em .3em;
 }
 /* 
  .arrow-up {
