--- a/css/style.css
+++ b/css/style.css
@@ -83,7 +83,7 @@ body{
 }
 #grid-holder0{
   box-sizing: border-box;
-  background-color: lightblue;
+  background-color: lightgray;
   min-width: 525px;
   text-align: center;
   
@@ -140,7 +140,7 @@ body{
 }
 
 #divider{
-  background: url('../single_border.png'); */
+  background: url('../single_border.png'); 
   background-size: contain;
   background-position: center;
   height: 2em;
