--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@ rgba(104, 252, 252, 0.5)
 rgba(30, 105, 190, 0.5) */
 
 body{
-  background-image: url("../cloud-drawing-texture-1.png");
+  background-image: url("../img/cloud-drawing-texture-1.png");
   /* background: linear-gradient(180deg, darkgray 0% , lightgray 18%, red  100%); */
   background-position: center;
   background-repeat: no-repeat;
@@ -153,7 +153,7 @@ body{
   font-weight: bolder; 
 }
 .torches{
-    background: url("../fire--v2.png");
+    background: url("../img/fire--v2.png");
     background-size: contain;
     background-color: rgba(190, 190, 190, 0.24);
     border-radius: 50%;
@@ -161,7 +161,7 @@ body{
   
 }
 .heartBox{
-  background: url("../heart--v2.png");
+  background: url("../img/heart--v2.png");
   background-size: contain;
   background-color: red;
   border-radius: 50%;
