--- a/css/style.css
+++ b/css/style.css
@@ -27,12 +27,14 @@ body{
   background-color: rgba(192, 192, 192, 0.7);
   border-radius: 1em;
   margin: .3rem;
+  z-index: 3;
+}
 /* 
   border-top: 1.5rem solid rgba(227, 215, 255, 0.8);
   border-left: 1.5rem solid rgba(227, 215, 255, 0.8);
   border-bottom: 1.5rem solid rgba(192, 192, 192, 0.8);
   border-right: 1.5rem solid rgba(192, 192, 192, 0.8); */
-} 
+
 
 #game-info{ 
   display: block;
@@ -133,7 +135,7 @@ body{
 }
 
 .player{
-  background-color: green;
+  background-color: hotpink;
   border-radius: 50%;
   z-index: 1;
   box-shadow: 0px 0px 30px rgba(0, 0, 0, 0.5);
